# AGEDATA_VISTA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  audit_findings.json  audit_report.docx  audit_test_output.txt  celery_app.py  celerybeat-schedule.db  create_dataset.py  dataset.csv  dataset.xlsx  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  dsa.py  generate_audit_report.cjs  generate_csv.py  generate_final_report.cjs  main.py  output.txt  plotly_sample.py  pyproject.toml  regression_dataset.csv  regression_sample.py  regression_sample_large.csv  requirements.txt  run_celery_autoreload.py  run_forcast.py  sales_data.csv  sample.csv  sample.xlsx  sample_time_series.csv  seed.py  test.db
alembic/: env.py
errors/: exceptions.py
models/: __init__.py  base_model.py  big_data_result.py  notification.py  notification_recipient.py  project.py  project_invitation.py  project_member.py  report.py  saved_model.py  subscription.py  subscription_plan.py  uploaded_file.py  user.py
schemas/: auth.py  chat.py  data_processing.py  data_progressing.py  default_response.py  descriptive_visualization.py  errors.py  payment.py  project.py  upload_dataset.py
settings/: cloudinary.py  pydantic_config.py
storage/: __init__.py  celery_db.py  database.py  redis_client.py  redis_sync_client.py  sync_database.py
tasks/: expire_trial_sub.py
templates/: reset_token.html  verification_email.html
utils/: async_request.py  audit_log.py  download_image.py  email_service.py  extract_cloudinary_public_id.py  hash_password.py  load_from_supabase.py  (+2 more)
(+196 files in other folders)
