[project]
name = "agedata-vista"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "bcrypt>=4.2.1",
    "fastapi>=0.115.7",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "yagmail>=0.15.293",
    "python-multipart>=0.0.20",
    "pyspark>=3.5.4",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "setuptools>=75.8.2",
    "cloudinary>=1.42.2",
    "requests>=2.32.3",
    "aiohttp>=3.11.13",
    "aiodns>=3.2.0",
    "scikit-learn>=1.6.1",
    "plotly>=6.0.1",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "premailer>=3.10.0",
    "jinja2>=3.1.6",
    "openai>=1.70.0",
    "statsmodels>=0.14.4",
    "prophet>=1.1.6",
    "xgboost>=3.0.2",
    "lightgbm>=4.6.0",
]
